chore: sync repo before update release

--- a/components/launcher-shell.html
+++ b/components/launcher-shell.html
@@ -68,7 +68,7 @@
 
           <button
             id="railDownloadsBtn"
-            class="rail-install-btn is-hidden"
+            class="rail-install-btn"
             type="button"
             aria-label="Downloads e instalacoes"
             aria-expanded="false"
